[tool.poetry]
name = "power-toggle-switch"
version = "0.0.7"
package-mode = false
description = "A power toggle service"
authors = ["ztarbug <foss@starwit.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.10"
pydantic-settings = "^2.0.3"
pyaml = "^25.7.0"
pytest = "8.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
testcontainers = "^4.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
