[tool.poetry]
name = "msu-manager"
version = "0.1.0"
package-mode = false
description = "MSU management component"
authors = ["ztarbug <foss@starwit.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.12.4"
pydantic-settings = "^2.0.3"
pyaml = "^25.7.0"
pytest = "9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
testcontainers = "^4.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
