[tool.poetry]
name = "msu-manager"
version = "0.1.0"
package-mode = false
description = "MSU management component"
authors = ["ztarbug <foss@starwit.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.10"
pydantic-settings = "^2.0.3"
pyaml = "^25.7.0"
pytest = "8.4.2"
fastapi = {extras = ["standard"], version = "^0.121.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
testcontainers = "^4.4.1"
pytest-asyncio = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
